# ct-vr

./: .gitignore  CITATION.cff  LICENSE  README.md  config.yaml  docker-compose.yml  environment.yml  pyproject.toml  readme.md
.github/workflows/: build-html-and-deploy.yml  build-pdf.yml  ci.yml
covid-vr-env/: Dockerfile  covid-vr_env.sh
covid-vr-env/pipeline/: models.py  pipeline.py
ct-vr-env/: Dockerfile  ct-vr_env.sh  iftInterp
ct-vr-env/pipeline/: models.py  pipeline.py  prediction_result.pkl  variables.py
jb-ct-vr/: README.md  environment.yml
jb-ct-vr/mini_book/: _config.yml  _toc.yml
jb-ct-vr/mini_book/docs/: index.md
jb-ct-vr/mini_book/docs/about/: about.md
jb-ct-vr/mini_book/docs/datasets/: private.md  public.md
jb-ct-vr/mini_book/docs/resources/: supplementary.md
jb-ct-vr/mini_book/docs/results/: binary.md  full.md  ternary.md
notebooks/: 00_quickstart.ipynb
scripts/: run_demo.py
src/python/pulmonet/: __init__.py
train-val-network/: .gitignore  README.md
train-val-network/config/: train_val.yaml
train-val-network/data/input/hmv-hcpa/train/: train1.csv  train2.csv  train3.csv  train4.csv  train5.csv
train-val-network/data/input/hmv-hcpa/val/: val1.csv  val2.csv  val3.csv  val4.csv  val5.csv
train-val-network/data/input/spgc/train/: train1.csv
train-val-network/data/input/spgc/val/: val1.csv
train-val-network/src/: plot_metrics.py  test.py  train_val.py
