[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pulmonet"
version = "0.1.0"
description = "Artifact code for: A Deep Learning Framework for Pulmonary Disease Classification Using Volume-Rendered CTs"
readme = "README.md"
authors = [
  { name = "Noemi Maritza L. Romero" },
  { name = "Ricco V. C. Soares" },
  { name = "Mariana Recamonde-Mendoza" },
  { name = "João L. D. Comba" }
]
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/<you>/pulmonary-dl-ct-2025"

[tool.setuptools.packages.find]
where = ["src/python"]
