[project]
name = "ctvr"
version = "0.1.0"
description = "Artifact code for: A Deep Learning Framework for Pulmonary Disease Classification Using Volume-Rendered CTs"
readme = "README.md"
authors = [
  { name = "Noemi Maritza L. Romero" },
  { name = "Ricco V. C. Soares" },
  { name = "Mariana Recamonde-Mendoza" },
  { name = "João L. D. Comba" }
]
license = { file = "LICENSE" }
requires-python = "=3.8"
dependencies = []

[project.urls]
Homepage = "https://github.com/joaocomba/ct-vr"

